// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications Render applications with emptyState 1`] = `
Array [
  <section
    class="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
    widget-type="InsightsPageHeader"
  >
    <h1
      class="pf-c-title pf-m-2xl"
      widget-type="InsightsPageHeaderTitle"
    >
       Testapp 
    </h1>
  </section>,
  <section
    class="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    <div
      class="pf-c-empty-state ins-c-not-authorized"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <svg
          aria-hidden="true"
          class="pf-c-empty-state__icon"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 448 512"
          width="1em"
        >
          <path
            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
            transform=""
          />
        </svg>
        <h5
          class="pf-c-title pf-m-lg"
        >
           You do not have access to Testapp
        </h5>
        <div
          class="pf-c-empty-state__body"
        >
          Contact your organization administrator(s) for more information.
        </div>
        <a
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          href="."
        >
          Go to landing page
        </a>
      </div>
    </div>
  </section>,
]
`;

exports[`Applications Render applications with mockState 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Applications)
    match={
      Object {
        "params": Object {
          "id": "testapp",
        },
      }
    }
  >
    <Applications
      appsConfig={
        Object {
          "testapp": Object {
            "frontend": Object {
              "title": "Test app",
            },
          },
        }
      }
      configLoaded={true}
      getConfig={[Function]}
      getSchema={[Function]}
      loaded={true}
      match={
        Object {
          "params": Object {
            "id": "testapp",
          },
        }
      }
      saveValues={[Function]}
      schema={
        Array [
          Object {
            "fields": Array [
              Object {
                "component": "text-field",
                "initialValue": "",
                "isRequired": true,
                "label": "Email",
                "name": "email",
                "validate": Array [
                  Object {
                    "type": "required",
                  },
                ],
              },
              Object {
                "component": "switch",
                "initialValue": false,
                "label": "Hide Satellite systems",
                "name": "hideSatelliteSystems",
                "type": "checkbox",
              },
            ],
          },
        ]
      }
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title="Test App"
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                Test App
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
      <Connect(Main)>
        <Main>
          <section
            className="pf-l-page__main-section pf-c-page__main-section"
            page-type=""
          >
            <NotAuthorized
              serviceName="Test App"
            >
              <Component
                className="ins-c-not-authorized"
                variant="full"
              >
                <div
                  className="pf-c-empty-state ins-c-not-authorized"
                >
                  <div
                    className="pf-c-empty-state__content"
                  >
                    <Component
                      icon={[Function]}
                    >
                      <LockIcon
                        aria-hidden="true"
                        className="pf-c-empty-state__icon"
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden="true"
                          aria-labelledby={null}
                          className="pf-c-empty-state__icon"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 448 512"
                          width="1em"
                        >
                          <path
                            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                            transform=""
                          />
                        </svg>
                      </LockIcon>
                    </Component>
                    <Component
                      headingLevel="h5"
                      size="lg"
                    >
                      <h5
                        className="pf-c-title pf-m-lg"
                      >
                         You do not have access to 
                        Test App
                      </h5>
                    </Component>
                    <Component>
                      <div
                        className="pf-c-empty-state__body"
                      >
                        Contact your organization administrator(s) for more information.
                      </div>
                    </Component>
                    <Component
                      component="a"
                      href="."
                      variant="primary"
                    >
                      <a
                        aria-disabled={false}
                        aria-label={null}
                        className="pf-c-button pf-m-primary"
                        data-ouia-component-id={null}
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe={true}
                        disabled={null}
                        href="."
                        tabIndex={null}
                        type={null}
                      >
                        Go to landing page
                      </a>
                    </Component>
                  </div>
                </div>
              </Component>
            </NotAuthorized>
          </section>
        </Main>
      </Connect(Main)>
    </Applications>
  </Connect(Applications)>
</Provider>
`;

exports[`Applications Render applications with no data 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Applications)
    match={
      Object {
        "params": Object {
          "id": "testapp",
        },
      }
    }
  >
    <Applications
      getConfig={[Function]}
      getSchema={[Function]}
      match={
        Object {
          "params": Object {
            "id": "testapp",
          },
        }
      }
      saveValues={[Function]}
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title="Testapp"
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                Testapp
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
      <Connect(Main)>
        <Main>
          <section
            className="pf-l-page__main-section pf-c-page__main-section"
            page-type=""
          >
            <NotAuthorized
              serviceName="Testapp"
            >
              <Component
                className="ins-c-not-authorized"
                variant="full"
              >
                <div
                  className="pf-c-empty-state ins-c-not-authorized"
                >
                  <div
                    className="pf-c-empty-state__content"
                  >
                    <Component
                      icon={[Function]}
                    >
                      <LockIcon
                        aria-hidden="true"
                        className="pf-c-empty-state__icon"
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden="true"
                          aria-labelledby={null}
                          className="pf-c-empty-state__icon"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 448 512"
                          width="1em"
                        >
                          <path
                            d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                            transform=""
                          />
                        </svg>
                      </LockIcon>
                    </Component>
                    <Component
                      headingLevel="h5"
                      size="lg"
                    >
                      <h5
                        className="pf-c-title pf-m-lg"
                      >
                         You do not have access to 
                        Testapp
                      </h5>
                    </Component>
                    <Component>
                      <div
                        className="pf-c-empty-state__body"
                      >
                        Contact your organization administrator(s) for more information.
                      </div>
                    </Component>
                    <Component
                      component="a"
                      href="."
                      variant="primary"
                    >
                      <a
                        aria-disabled={false}
                        aria-label={null}
                        className="pf-c-button pf-m-primary"
                        data-ouia-component-id={null}
                        data-ouia-component-type="PF4/Button"
                        data-ouia-safe={true}
                        disabled={null}
                        href="."
                        tabIndex={null}
                        type={null}
                      >
                        Go to landing page
                      </a>
                    </Component>
                  </div>
                </div>
              </Component>
            </NotAuthorized>
          </section>
        </Main>
      </Connect(Main)>
    </Applications>
  </Connect(Applications)>
</Provider>
`;
